manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello-k8s
  name: hello-k8s
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      name: hello-k8s
      labels:
        app: hello
    spec:
      containers:
        - name: hello-k8s
          image: gitea.klavionik.net/klavionik/hello-k8s:1.1
