manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-k8s
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - hello.klavionik.net
      secretName: hello-k8s-tls
  rules:
    - host: hello.klavionik.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-k8s
                port:
                  number: 7777
